# Cryptonic

./: .gitignore  Cargo.toml  Installation.md  README.md
src/: ciphtxt.rs  errors.rs  key_gen.rs  layer.rs  layer_trait.rs  layout.rs  lib.rs  main.rs  matrix.rs  nnet.rs  tests.rs  utils.rs
src/cryptography/: activations.rs  ciphtxt.rs  key_gen.rs  mod.rs  type_traits.rs
src/examples/: example_net.rs  mod.rs  simple_net.rs
src/neural_network/: activations.rs  dense_layer.rs  key_gen.rs  layer_trait.rs  layer_type.rs  mod.rs  nnet.rs  test_layer.rs
src/tensor_library/: errors.rs  layout.rs  matrix.rs  mod.rs
tests/: tests.rs
