[package]
name = "Cryptonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

concrete = { version = "*", features = [ "booleans", "shortints", "integers", "serde"] }
# tfhe = { version = "*", features = ["boolean", "shortint", "x86_64-unix"] }
concrete-integer = {version = "*"}
concrete-shortint = {version = "*"}
concrete-boolean = {version = "*"}
concrete-core = {version = "*"}

bincode = "1.3.3"