[package]
name = "Cryptonic"
version = "0.1.0"
edition = "2021"

include = [
    "**/*.rs",
    "Cargo.toml",
]
description = "This project includes a tensor library, utilities for FHE functionality and most importantly an FHE based ML library"
license-file = "LICENSE"
authors = ["Martin Chtilianov <martin@chtilianov.com>", "George Kolev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tfhe = { version = "0.1.7", features = [ "boolean", "shortint", "x86_64-unix" ] }

bincode = "1.3.3"