[package]
name = "Cryptonic"
version = "0.1.1"
edition = "2021"

include = [
    "**/*.rs",
    "Cargo.toml",
]
description = "This project includes a tensor library, utilities for FHE functionality and most importantly an FHE based ML library"
license-file = "LICENSE"
authors = ["Martin Chtilianov <martin@chtilianov.com>", "George Kolev"]
documentation = "https://docs.rs/Cryptonic"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(unix)'.dependencies]
tfhe = { version = "0.1.7", features = [ "boolean", "shortint", "x86_64-unix" ] }

[target.'cfg(windows)'.dependencies]
tfhe = { version = "0.1.7", features = [ "boolean", "shortint", "x86_64" ] }


bincode = "1.3.3"
